--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ android {
 
 dependencies {
 
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
