--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
 
 dependencies {
 
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
