--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,14 +49,19 @@ android {
 }
 
 dependencies {
+    //Hilt
     implementation 'com.google.dagger:hilt-android:2.44.2'
     kapt 'com.google.dagger:hilt-compiler:2.44.2'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
+    // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    // Retrofit with Moshi Converter
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    // Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
