--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         compose_ui_version = '1.1.1'
+        room_version = '2.4.2'
     }
     dependencies{
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.44.2"
