Test, caching might work

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ android {
 }
 
 dependencies {
+    def work_version = "2.7.1"
+
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+
     // Coil (for images from the web)
     implementation "io.coil-kt:coil-compose:2.2.2"
 
